# 50-port-ai-gateway

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake  FindTensorRT.cmake
config/: config.json
include/app/: gateway_pipeline.h
include/common/: frame.h  gpu_health_monitor.h  gpu_memory.h  logger.h  thread_safe_queue.h  time_util.h
include/inference/: corner_slot_detector.h  cuda_preprocessor.h  trt_engine.h
include/safety/: plc_command_manager.h  swing_energy_analyzer.h
include/streaming/: frame_synchronizer.h  rtsp_reader.h
include/tracking/: corner_slot_tracker.h  kalman_filter3d.h
models/: README.md
scripts/: build.bat  build.sh
src/: main.cpp
src/app/: gateway_pipeline.cpp
src/common/: gpu_health_monitor.cpp  gpu_memory.cpp  logger.cpp  time_util.cpp
src/inference/: corner_slot_detector.cpp  cuda_preprocessor.cu  trt_engine.cpp
src/safety/: plc_command_manager.cpp  swing_energy_analyzer.cpp
src/streaming/: frame_synchronizer.cpp  rtsp_reader.cpp
src/tracking/: corner_slot_tracker.cpp  kalman_filter3d.cpp
